--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
     "@codemirror/autocomplete": "^6.20.0",
     "@codemirror/commands": "^6.10.1",
     "@codemirror/highlight": "^0.19.8",
+    "@codemirror/lang-json": "^6.0.2",
     "@codemirror/lang-markdown": "^6.5.0",
+    "@codemirror/lang-python": "^6.2.1",
+    "@codemirror/lang-sql": "^6.10.0",
+    "@codemirror/lang-xml": "^6.1.0",
     "@codemirror/language": "^6.12.1",
+    "@codemirror/legacy-modes": "^6.5.2",
     "@codemirror/search": "^6.5.11",
     "@codemirror/theme-one-dark": "^6.1.3",
     "@lezer/highlight": "^1.2.3",
