--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@codemirror/theme-one-dark": "^6.1.3",
     "@lezer/highlight": "^1.2.3",
     "codemirror": "^6.0.2",
-    "marked": "^17.0.1"
+    "marked": "^17.0.1",
+    "mermaid": "^11.12.2"
   }
 }
