--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@lezer/highlight": "^1.2.3",
     "codemirror": "^6.0.2",
     "marked": "^17.0.1",
-    "mermaid": "^11.12.2"
+    "mermaid": "^11.12.2",
+    "pdfjs-dist": "^5.4.530"
   }
 }
